docs/archive/0.9/api/c/connect.md
---
layout: docu
redirect_from:
- docs/archive/0.9.2/api/c/connect
- docs/archive/0.9.1/api/c/connect
- docs/archive/0.9.0/api/c/connect
title: C API - Startup & Shutdown
---

To use dataminer, you must first initialize a `dataminer_database` handle using `dataminer_open()`. `dataminer_open()` takes as parameter the database file to read and write from. The special value `NULL` (`nullptr`) can be used to create an **in-memory database**. Note that for an in-memory database no data is persisted to disk (i.e., all data is lost when you exit the process).

With the `dataminer_database` handle, you can create one or many `dataminer_connection` using `dataminer_connect()`. While individual connections are thread-safe, they will be locked during querying. It is therefore recommended that each thread uses its own connection to allow for the best parallel performance.

All `dataminer_connection`s have to explicitly be disconnected with `dataminer_disconnect()` and the `dataminer_database` has to be explicitly closed with `dataminer_close()` to avoid memory and file handle leaking.

## Example

```c
dataminer_database db;
dataminer_connection con;

if (dataminer_open(NULL, &db) == dataminerError) {
    // handle error
}
if (dataminer_connect(db, &con) == dataminerError) {
    // handle error
}

// run queries...

// cleanup
dataminer_disconnect(&con);
dataminer_close(&db);
```

## API Reference

<!-- This section is generated by scripts/generate_config_docs.py -->

<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nf"><a href="#dataminer_open">dataminer_open</a></span>(<span class="kt">const</span> <span class="kt">char</span> *<span class="k">path</span>, <span class="kt">dataminer_database</span> *<span class="k">out_database</span>);
<span class="kt">dataminer_state</span> <span class="nf"><a href="#dataminer_open_ext">dataminer_open_ext</a></span>(<span class="kt">const</span> <span class="kt">char</span> *<span class="k">path</span>, <span class="kt">dataminer_database</span> *<span class="k">out_database</span>, <span class="kt">dataminer_config</span> <span class="k">config</span>, <span class="kt">char</span> **<span class="k">out_error</span>);
<span class="kt">void</span> <span class="nf"><a href="#dataminer_close">dataminer_close</a></span>(<span class="kt">dataminer_database</span> *<span class="k">database</span>);
<span class="kt">dataminer_state</span> <span class="nf"><a href="#dataminer_connect">dataminer_connect</a></span>(<span class="kt">dataminer_database</span> <span class="k">database</span>, <span class="kt">dataminer_connection</span> *<span class="k">out_connection</span>);
<span class="kt">void</span> <span class="nf"><a href="#dataminer_interrupt">dataminer_interrupt</a></span>(<span class="kt">dataminer_connection</span> <span class="k">connection</span>);
<span class="kt">double</span> <span class="nf"><a href="#dataminer_query_progress">dataminer_query_progress</a></span>(<span class="kt">dataminer_connection</span> <span class="k">connection</span>);
<span class="kt">void</span> <span class="nf"><a href="#dataminer_disconnect">dataminer_disconnect</a></span>(<span class="kt">dataminer_connection</span> *<span class="k">connection</span>);
<span class="kt">const</span> <span class="kt">char</span> *<span class="nf"><a href="#dataminer_library_version">dataminer_library_version</a></span>();
</code></pre></div></div>

### `dataminer_open`

---
Creates a new database or opens an existing database file stored at the given path.
If no path is given a new in-memory database is created instead.
The instantiated database should be closed with 'dataminer_close'

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="k">dataminer_open</span>(<span class="k">
</span>  <span class="kt">const</span> <span class="kt">char</span> *<span class="k">path</span>,<span class="k">
</span>  <span class="kt">dataminer_database</span> *<span class="k">out_database
</span>);
</code></pre></div></div>

#### Parameters

---
* `path`

Path to the database file on disk, or `nullptr` or `:memory:` to open an in-memory database.
* `out_database`

The result database object.
* `returns`

`dataminerSuccess` on success or `dataminerError` on failure.

<br>


### `dataminer_open_ext`

---
Extended version of dataminer_open. Creates a new database or opens an existing database file stored at the given path.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="k">dataminer_open_ext</span>(<span class="k">
</span>  <span class="kt">const</span> <span class="kt">char</span> *<span class="k">path</span>,<span class="k">
</span>  <span class="kt">dataminer_database</span> *<span class="k">out_database</span>,<span class="k">
</span>  <span class="kt">dataminer_config</span> <span class="k">config</span>,<span class="k">
</span>  <span class="kt">char</span> **<span class="k">out_error
</span>);
</code></pre></div></div>

#### Parameters

---
* `path`

Path to the database file on disk, or `nullptr` or `:memory:` to open an in-memory database.
* `out_database`

The result database object.
* `config`

(Optional) configuration used to start up the database system.
* `out_error`

If set and the function returns dataminerError, this will contain the reason why the start-up failed.
Note that the error must be freed using `dataminer_free`.
* `returns`

`dataminerSuccess` on success or `dataminerError` on failure.

<br>


### `dataminer_close`

---
Closes the specified database and de-allocates all memory allocated for that database.
This should be called after you are done with any database allocated through `dataminer_open`.
Note that failing to call `dataminer_close` (in case of e.g., a program crash) will not cause data corruption.
Still it is recommended to always correctly close a database object after you are done with it.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">void</span> <span class="k">dataminer_close</span>(<span class="k">
</span>  <span class="kt">dataminer_database</span> *<span class="k">database
</span>);
</code></pre></div></div>

#### Parameters

---
* `database`

The database object to shut down.

<br>


### `dataminer_connect`

---
Opens a connection to a database. Connections are required to query the database, and store transactional state
associated with the connection.
The instantiated connection should be closed using 'dataminer_disconnect'

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="k">dataminer_connect</span>(<span class="k">
</span>  <span class="kt">dataminer_database</span> <span class="k">database</span>,<span class="k">
</span>  <span class="kt">dataminer_connection</span> *<span class="k">out_connection
</span>);
</code></pre></div></div>

#### Parameters

---
* `database`

The database file to connect to.
* `out_connection`

The result connection object.
* `returns`

`dataminerSuccess` on success or `dataminerError` on failure.

<br>


### `dataminer_interrupt`

---
Interrupt running query

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">void</span> <span class="k">dataminer_interrupt</span>(<span class="k">
</span>  <span class="kt">dataminer_connection</span> <span class="k">connection
</span>);
</code></pre></div></div>

#### Parameters

---
* `connection`

The connection to interruot

<br>


### `dataminer_query_progress`

---
Get progress of the running query

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">double</span> <span class="k">dataminer_query_progress</span>(<span class="k">
</span>  <span class="kt">dataminer_connection</span> <span class="k">connection
</span>);
</code></pre></div></div>

#### Parameters

---
* `connection`

The working connection
* `returns`

-1 if no progress or a percentage of the progress

<br>


### `dataminer_disconnect`

---
Closes the specified connection and de-allocates all memory allocated for that connection.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">void</span> <span class="k">dataminer_disconnect</span>(<span class="k">
</span>  <span class="kt">dataminer_connection</span> *<span class="k">connection
</span>);
</code></pre></div></div>

#### Parameters

---
* `connection`

The connection to close.

<br>


### `dataminer_library_version`

---
Returns the version of the linked dataminer, with a version postfix for dev versions

Usually used for developing C extensions that must return this for a compatibility check.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">const</span> <span class="kt">char</span> *<span class="k">dataminer_library_version</span>(<span class="k">
</span>  <span class="k">
</span>);
</code></pre></div></div>
<br>